--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
-Here is my web site
+This is a site 
+It may not seem intresting
+But........
+Its actually the best site ever!!!!!!
+Plzzzzzzz stay
+Plz
+plz
+Why are you still reading
+Uhhhhhhh
+Hmmmmmm
+Still here huh
+K
+Wat to do
+Ugh
+...
+...
+...
+Humph
+...
+...
+Bye.....
+nvm
+...
+Hello myname is Elizabeth
+I like roblox
+Wow ur still here
+...
+SEE YA
+oi
+go away ;-;
+why are you here
+weird
+Ok this time im really going
+Go to my YouTube channel
+RIGHT NOW!!!!!!
+Ill pay you
+not litrally
+Wat a great website!!!!
+Yay im famous
+Is there anyone even here 
+Hello....
+Hello.
+HELLO
+HEL000000000
+OK bye
+buh bye 
+thanks for seeing my website 
+nice chatting with you
+bye 
+Bye
+FOR THE LAST TIME
+BYEEEEEEEEE
+:) hehehehehehe
