--- a/index.html
+++ b/index.html
@@ -1,71 +1,9 @@
-This is a site 
-It may not seem intresting
-But........
-Its actually the best site ever!!!!!!
-Plzzzzzzz stay
-Plz
-plz
-Why are you still reading
-Uhhhhhhh
-Hmmmmmm
-Still here huh
-K
-Wat to do
-Ugh
-...
-...
-...
-Humph
-...
-...
-Bye.....
-nvm
-...
-Hello myname is Elizabeth
-I like roblox
-Wow ur still here
-...
-SEE YA
-oi
-go away ;-;
-why are you here
-weird
-Ok this time im really going
-Go to my YouTube channel
-RIGHT NOW!!!!!!
-Ill pay you
-not litrally
-Wat a great website!!!!
-Yay im famous
-Is there anyone even here 
-Hello....
-Hello.
-eeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeefjfvhjajdbhdsjhbdshjbfhjdsbcjhdbchjdsjcbdshjdshjabdjcdschdjschjsbchjsbdjchsdhCHSDhjsbhsahjDhkshazdjsfhjsdhjs
-djfsahfjdhfjsdhfjafhjbdshjfsadhfhdsfnskjafnlkjdvnjkfdbhjfbhjdbsfjhsf
-fdgsdfhsdhg
-jd
-f
-jhgjydthdfgkjhjdmhjdfhgffhjmkjmynhbgfvdcsxcdfvgbhnyjumkimjnhbgvfcdsxazzasxcdfvgbhjk,mjnhbgvfcdxs
-asdfghjukijuhgfdsadcfgthyjukikjuhygtfrdes
-dfgthyjukikijuhygtfrdesfrghjuklok,mjnhgfdfghjk
-lkjhbdgjrtiojthrgthyjukmjhbgvfdsd
-fghjkjhgfdfrghtyjukf,dyjmhnsfgbdfsddgrht
-jym jghnfgbdfvsdfhretjrymtfjyhngbvfdaShzdjmk,khjmghngbdfs
-dmfhj,hkhjghnfgbdfgfmhj,kgfhghghg
-hghghgjhanjkgrj,jmghfdsdefrgthjukijhgfdswsdefghjyuhgfdsadfghjkjmhgfvcdsx
-asdfghjkjhgfvdghnjmkl,kmjhgfdsfghyjukilo;l,kjhbgvfcdsfvhjul,jkhhgfefrsbtsdfj,k,jmhgfdfsgdhfjkj.k,mhngbf
-dfsfghnjmk,kjmnhghgmh,j.k//.k,jmhgffdghjmhkg,j.kjl.k,jhgfhj,.k/g f
-dvsfdsbfgbvsjfneuafgesuyadgeyufigheafhjfrhsgrghesjfghrfgsughbfjshgrbhgsjrdfbfhfjdgbdjhfabghjfdsbkgfhbghjrbsjhbfjszkhfdishfjabhjsfsbhdjfb
-dzkndjklsdnvjkzhedhfueohauifsghriuogufdx
-
-HELLO
-HEL000000000
-OK bye
-buh bye 
-thanks for seeing my website 
-nice chatting with you
-bye 
-Bye
-FOR THE LAST TIME
-BYEEEEEEEEE
-:) hehehehehehe
+<!doctype html>
+<html>
+  <head>
+    <title>My Web Site</title>
+  </head>
+  <body>
+    Here's a link to my <a href="/flappy">Flappy Bird clone</a>
+  </body>
+</html>
